- CHG: Switched files are only shown in the check-for-modifications
       dialog and not in e.g. the commit/revert/add dialog if they're
       not modified. (Stefan)
- CHG: Importing a folder from the repository browser now uses the
       global ignore patterns. (Stefan)
- CHG: The ancestry of two nodes is ignored when showing the differences
       in the repository browser. (Stefan)
- BUG: The header in TortoiseBlame was shown in the wrong font in translated
       versions. (Kazutoshi Satoda)
- BUG: The state of the "Floppy drives" checkbox was not set correctly
       the first time on startup. (Stefan)
- BUG: If the file list was initially empty, showing more files didn't
       work correctly. (Stefan)
- BUG: In the revision graph, if a button on the toolbar is pressed while
       the updating thread is running the state of the button changed
       without the action being done. (Stefan)
- BUG: Reverting a file removed it from the file list, even if it
       was switched. (Ivan Gerasimov)
- BUG: Selecting fonts with non-ascii names didn't work in the
       scintilla edit control. (Kazutoshi Satoda)
- BUG: The file titles were not always un-escaped. (Stefan)
- BUG: Ignored files couldn't be deleted correctly 
       from the TSVN dialogs. (Ivan Gerasimov)
- BUG: Reverting an added file with history didn't reset the
       text status and the copied flag in the commit/cfm/...
       dialogs. (Stefan)
- BUG: Wrong regex strings in a bugtraq property could crash TortoiseProc
       or force it into an endless loop. (Stefan)
- BUG: The error message "user cancelled" was not properly encoded
       and would show up garbled in certain translations. (Stefan)
- BUG: TortoiseMerge could sometimes not diff 
       UTF-16 files correctly. (Stefan)
- BUG: The cache could crash with overly long path names. (Stefan)
- BUG: The "help" button in the lock dialog did nothing. (Stefan)


Version 1.4.0RC1
- NEW: Command line param /bugid to prefill the bug ID